<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="create_account">Create Account</string>
    <string name="need_account">Need an Account?</string>
    <string name="signin">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New Password:</string>
    <string name="reenter_password">Re-Enter Password:</string>
    <string name="submit">Submit</string>
    <string name="email">Email:</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification Code:</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="next">&gt;</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forgot_pw">ForgotPw</string>
    <string name="title_activity_change_pw">ChangePw</string>
    <string name="title_activity_new_password">NewPassword</string>
    <string name="title_activity_verify">Verify</string>
    <string name="title_activity_main_form">MainForm</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="arrange_by">Arrange by:</string>
    <string name="arrange_by_summary">Use this feature to set the default arrange by for your book list</string>
    <string name="filter_by_rating">Filter by rating:</string>
    <string name="filter_by_rating_summary">Use this feature to show only books with a certain rating.</string>
    <string name="filter_by_status">Filter by status:</string>
    <string name="filter_by_status_summary">Use this feature to show only books with a particular status.</string>
    <string name="title_search">Title:</string>
    <string name="title_search_summary">Non-case sensitive search for books containing the entered text as part of its title.</string>
    <string name="author_search">Author:</string>
    <string name="author_search_summary">Non-case sensitive search for books containing the entered text as part the author\'s name.</string>
    <string name="addBookMenuItem">Add New Book to List</string>
    <string name="viewBookListMenuItem">View Online Book List</string>
    <string name="viewFriendsListMenuItem">View Friend\'s List</string>
    <string name="search_user_results">Search User results for: </string>
    <string name="edit_user">Edit User: </string>
    <string name="user_email">Email:</string>
    <string name="user_password">Enter Password</string>
    <string name="user_confirm_password">Re-enter Password</string>
    <string name="update_user_email">Update Email</string>
    <string name="change_user_type">Change User Type:</string>
    <string name="type_user">User</string>
    <string name="type_admin">Administrator</string>
    <string name="change_user_security">User Security</string>
    <string name="security_public">Public</string>
    <string name="security_friends_only">Friends Only</string>
    <string name="security_private">Private</string>
    <string name="user_status">User Status</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="button_update">Update</string>
    <string name="title_activity_edit_user">EditUser</string>
    <string name="search_by_isbn">Enter ISBN:</string>
    <string name="book_edit">Edit Book Information</string>
    <string name="book_isbn">ISBN:</string>
    <string name="book_author">Author:</string>
    <string name="book_title">Title:</string>
    <string name="book_scanned">Scanned?</string>
    <string name="book_num_ratings">Number of Ratings:</string>
    <string name="book_sum_ratings">Sum of Ratings:</string>
    <string name="book_status">Status:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="title_activity_book_app_search">Book Search (App Library)</string>
    <string name="title_activity_edit_book">Edit Application Book</string>
    <string name="cancel">Cancel</string>
    <string name="edit_user2">Edit User</string>
    <string name="view_book_list">View Book List</string>
    <string name="bookies">By Team Bookies</string>
    <string name="heather">Heather Persson</string>
    <string name="shelley">Shelley Klinzing</string>
    <string name="josh">Josh Villarreal</string>
    <string name="laura">Laura Manuel</string>
    <string name="manuel">Manuel Wong</string>
    <string name="search_user">Search for a specific User:</string>
    <string name="search_user2">User Search</string>
    
    <string name="go">GO</string>
    <string name="title_activity_book_scanner">BookScanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="wishlist">Wishlist</string>
    <string name="read">Read</string>
    <string name="reading">Reading</string>
    <string name="book_security">Book Security Setting:</string>
    <string name="rating">Rating:</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="date">Date Read:</string>
    <string name="comments">Comments:</string>
    <string name="edit_per_book">Edit Personal Book</string>
    <string name="delete_book">Delete Book</string>
    <string name="add_book">Add Book</string>
    <string name="date_format">yyyy-mm-dd</string>
    <string name="book_summary">Book Summary</string>
    <string name="agree_user_agreement"><u>I accept the User Agreement</u></string>
    <string name="user_agreement">User Agreement</string>
    <string name="tos1">1. You agree to the terms and conditions outlined in this terms and conditions of use agreement with respect to our app bookkeeper. This agreement constitutes the entire and only agreement between us and you and supersedes all prior or contemporaneous agreements representations warranties and understandings with respect to the app the content and the subject matter of this agreement. This agreement may be amended by us at any time and at any frequency without specific notice to you. The latest agreement will be posted on the app and you should review this agreement prior to using  the app.</string>
    <string name="tos2">2. Copyright - The content organization graphics design and other matters related to the site are protected under applicable copyrights and other proprietary laws including but not limited to intellectual property laws. The copying reproduction use modification or publication by you of any such matters or any part of the app is strictly prohibited without our express prior written permission.</string>
    <string name="tos3">3. Deleting and Modification - We reserve the right in our sole discretion without any obligation and without any notice requirement to you to edit or delete any documents information or other content appearing on the app including this agreement.</string>
    <string name="tos4">4. Indemnification - You agree to indemnify defend and hold us our officers our share holders our partners attorneys and employees harmless from any and all liability loss damages claim and expense including reasonable attorney fees related to your violation of this agreement or use of the site.</string>
    <string name="tos5">5. Limits - All responsibility or liability for any damages caused by viruses contained within the electronic file containing the form or document is disclaimed. We will not be liable to you for any incidental special or consequential damages of any kind that may result from use of or inability to use the site.</string>
    <string name="tos6">6. Third Party Website - All rules terms and conditions other policies including privacy policies and operating procedures of third party linked websites will apply to you while on such websites we are not responsible for the content accuracy or opinions express in such websites and such websites are not investigated monitored or checked for accuracy or completeness by us. Inclusion of any linked website in our app does not imply approval or endorsement of the linked website by us this app and the third party linked websites are independent entities and neither party has authority to make any representations or commitments on behalf of the other. If you decide to leave our app and access these third party linked sites you do so at your own risk.</string>
    <string name="tos7">7. Submissions - All suggestions, ideas, notes, concepts, and other information you may send to us collectively submissions shall be deemed and shall remain our sole property and shall not be subject to any obligation of confidence on our part. Without limiting the foregoing we shall be deemed to own all known and hereafter existing rights of every kind and nature regarding the submissions and shall be entitled to unrestricted use of the submissions for any purpose without compensation to the provider of the submissions.</string>
    <string name="title_activity_user_agreement">User Agreement</string>
    <string name="title_activity_add_book_choice">Add Book</string>
    <string name="books">Books</string>
    
    <string name="scan_help">Hints for Adding Books</string>
    <string name="scan_hint">If you receive the message "Ivalid Scan" you will have to manually enter the ISBN number.</string>
    <string name="finding_isbn">ISBN numbers can be found in multiple places:</string>
    <string name="finding_isbn_UPC">Look in the white box for the ISBN - the ISBN number is listed to the right.</string>
    <string name="finding_isbn_no_UPC">Sometimes the ISBN is written below the bar - it is usually a 9 or 10 digit number.</string>
    <string name="finding_isbn_inside_book">The ISBN can always be found on the inside of the book on the copyright page.</string>
    
    <string name="title_activity_user_form">User List</string>
    
    <!-- Created by Shelley -->
    <string name="sortByTitle">Sort by Title</string>
    <string name="sortByAuthor">Sort by Author</string>
    <string name="sortByStatus">Sort by Status</string>
    <string name="sortByOwned">Sort by Owned</string>
    <string name="search">Search</string>

</resources>
