<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference 
	    android:key="addBook"
        android:title="@string/add_book"
        android:summary="@string/add_book_summary"
        />
	<ListPreference
		android:key="arrangeBy"
		android:title="@string/arrange_by"
		android:summary="@string/arrange_by_summary"
		android:entries ="@array/arrange_by_options"
		android:entryValues="@array/arrange_by_options_values"
		android:defaultValue="t" />
	<ListPreference
		android:key="filterByRating"
		android:title="@string/filter_by_rating"
		android:summary="@string/filter_by_rating_summary"
		android:entries ="@array/filter_by_rating"
		android:entryValues="@array/filter_by_rating_values"
		android:defaultValue="n" />
	<ListPreference
		android:key="filterByStatus"
		android:title="@string/filter_by_status"
		android:summary="@string/filter_by_status_summary"
		android:entries ="@array/filter_by_status"
		android:entryValues="@array/filter_by_status_values"
		android:defaultValue="0" />
	<EditTextPreference
		android:key="titleSearch"
		android:title="@string/title_search"
		android:summary="@string/title_search_summary" 
		android:defaultValue=""/>
	<EditTextPreference
		android:key="authorSearch"
		android:title="@string/author_search"
		android:summary="@string/author_search_summary"
		android:defaultValue="" />
   <com.bookies.bookkeeper.ResetDefDiagPref  
        android:dialogMessage="Revert all values to their defaults?"  
        android:key="resetDialog"  
        android:negativeButtonText="No, KEEP current values"  
        android:persistent="false"  
        android:positiveButtonText="Yes, RESET all values"  
        android:summary="Reset all settings to their initial values."  
        android:title="Reset to default" >  
    </com.bookies.bookkeeper.ResetDefDiagPref>  
    <Preference 
        android:title="Return to list"
        android:key="returnButton"
        android:summary="Apply filter and sort and return to list" />
</PreferenceScreen>