<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bookies.bookkeeper.MainForm" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/filters"
        android:orderInCategory="99"
        android:showAsAction="always"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/scanBook"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/addBookMenuItem"/>
    <item
        android:id="@+id/viewMyList"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/sortByTitle"/>
    <item
        android:id="@+id/sortByAuthor"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/sortByAuthor"/>
    <item
        android:id="@+id/sortByStatus"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/sortByStatus"/>
    <item
        android:id="@+id/sortByOwned"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/sortByOwned"/>
    <item
        android:id="@+id/search"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/search"/>
</menu>