<!-- This file is for an Admin to edit a user. -->
<!-- Need code to pull CURRENT USER information. -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- "Edit User" -->

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_user"
            android:textSize="20sp" />

        <!-- ********** CHANGE EMAIL ********** -->
        <!-- "Email:" -->

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/user_email"
            android:textSize="18sp" />
        <!-- "Update Email" -->

        <EditText
            android:id="@+id/UpdateUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/update_user_email"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <!-- ********** CHANGE PASSWORD ********** -->
        <!-- Text "Change Password" -->
        <!-- The Admin will have rights to change the user's password to something of their choosing. -->


        <!-- "Change Password" -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/change_password"
            android:textSize="18sp" />
        <!-- "Password" -->

        <EditText
            android:id="@+id/UpdateUserPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_password"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>
        <!-- "Re-Enter Password" -->

        <EditText
            android:id="@+id/UpdateUserPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_confirm_password"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>

        <!-- ********** CHANGE USER TYPE ********** -->
        <!-- User Type (User or Admin) (0: user; 1: admin) -->


        <!-- "Change User Type:" -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/change_user_type"
            android:textSize="18sp" />
        <RadioGroup
		    android:id="@+id/UserTypeRadioGroup"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
	        <!-- "User" -->
	        <RadioButton
	            android:id="@+id/TypeUser"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/type_user" />
	        <!-- "Administrator" -->
	        <RadioButton
	            android:id="@+id/TypeAdmin"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/type_admin" />
	    </RadioGroup>

        <!-- ********** CHANGE USER SECURITY ********** -->
        <!-- Text "User Security" (0: all can view; 1: friends only; 2: user only) -->


       

        <!-- ********** CHANGE USER STATUS ********** -->
        <!-- Text "User Status" (terminated or active) (0: inactive; 1: active) -->
        <!-- use buttons for these fields -->


        <!-- "Change User Satus:" -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/user_status"
            android:textSize="18sp" />
        <!-- "Active" -->
		
		<RadioGroup
		    android:id="@+id/UserStatusRadioGroup"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
	        <RadioButton
	            android:id="@+id/StatusActive"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/status_active" />
	        <!-- "Inactive" -->
	
	        <RadioButton
	            android:id="@+id/StatusInactive"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/status_inactive" />
	     </RadioGroup>

        <!-- ********** UPDATE CHANGES ********** -->
	    <Button
	        android:id="@+id/UpdateUserInfo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/button_update"
	        android:onClick="update" />
	        <!-- UPDATE BUTTON -->

    </LinearLayout>

</ScrollView>